fit_predictor/cvrp_lehd/evaluates/run5/2025-01-26_10-58-25/problem_iter34_response7.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPModel.py", line 6, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\gpt.py", line 19
    smoothed_matrix = F\ufffd\ufffd\ufffd\ufffd(emphasized_matrix)
                        ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xc8 in position 1: invalid continuation byte

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2/problems/cvrp_lehd/eval.py", line 15, in <module>
    from VRPTester import VRPTester as Tester
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPTester.py", line 4, in <module>
    from VRPModel import VRPModel as Model
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPModel.py", line 8, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\gpt.py", line 19
    smoothed_matrix = F\ufffd\ufffd\ufffd\ufffd(emphasized_matrix)
                        ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xc8 in position 1: invalid continuation byte
